AC_INIT([configure.ac])
AC_PREREQ([2.69])
AC_CONFIG_SRCDIR([Makefile.in])
#AC_CONFIG_AUX_DIR([aux])
AC_CONFIG_MACRO_DIR([m4])

#AM_INIT_AUTOMAKE([1.12 -Wall -Werror foreign subdir-objects])

#AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES(
    [arduino.mk]
    [include.mk]
    [Makefile]
    [src/main/Makefile]
    [src/lib/arduino/Makefile]
    [src/lib/AtlasPH/Makefile]
    [src/lib/ds3231rtc/Makefile]
    [src/lib/OneWire/Makefile]
    [src/lib/PString/Makefile]
    [src/lib/SD/Makefile]
    [src/lib/SoftwareSerial/Makefile]
    [src/lib/Wire/Makefile]
    [src/test/ez_ph_com/Makefile]
    [src/test/rtc/Makefile]
)
AC_OUTPUT

